[project]
name = "fruit-and-vegetable-price"
version = "0.1.0"
description = "Analysis of Fruit and Vegetable Price"
authors = [
    {name = "Loc Nguyen", email = "loc.nguyen.leo@gmail.com"}]
license = {text = "N/A"}
readme = "README.md"
requires-python = "^3.13"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "plotly (>=6.5.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
